--- a/index.html
+++ b/index.html
@@ -3,27 +3,68 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Decision Maker</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<title>Cuestionario Amor</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-    }
+body {
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    background-color: #ffe6e6; /* Light pink background */
+    color: #333333; /* Dark gray text color */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
-    .container {
-        margin: 50px auto;
-        width: 80%;
-    }
-    button {
-        padding: 10px 20px;
-        font-size: 16px;
-        margin: 10px;
-        cursor: pointer;
-    }
+.container {
+    margin: 50px auto;
+    width: 80%;
+}
+h1 {
+    color: #ff4d4d; /* Red for headings */
+    text-transform: uppercase; /* Convert text to uppercase */
+    font-weight: 800; /* Make the text bold */
+}
+button {
+    font-family: 'Open Sans', sans-serif;
+    padding: 10px 20px;
+    font-size: 20px;
+    margin: 10px;
+    cursor: pointer;
+    background-color: #ff4d4d; /* Red background for buttons */
+    color: #ffffff; /* White text color for buttons */
+    border: none;
+    border-radius: 5px;
+}
+
+#options button {
+    display: block;
+    margin: 10px auto;
+}
+
+#result {
+    margin-top: 20px;
+}
+
+#result p {
+    color: #ff4d4d; /* Red color for result text */
+}
+
+#result p:first-child {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+#result p:last-child {
+    font-size: 16px;
+    color: #333333; /* Dark gray color for the last result message */
+}
+
+
+
     #option1, #option2 {
         display: block;
         margin: 10px auto;
@@ -46,50 +87,125 @@
     animation: slideDown 1s forwards;
 }
 
+#heart {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+}
+
+#heart::before,
+#heart::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 50px;
+    height: 80px;
+    border-radius: 50px 50px 0 0;
+    background: red;
+}
+
+#heart::before {
+    left: 50%;
+    transform: translateX(-50%) rotate(-45deg);
+}
+
+#heart::after {
+    left: 0;
+    transform: rotate(45deg);
+}
+
+.message {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 25px;
+            font-weight: 300;
+
+        }
+
 
 </style>
 </head>
 <body>
 
 <div class="container">
-    <h1 id="title">Tu lenguaje del amor</h1>
+    
+
+    <h1 id="title">DESCUBRE TU LENGUAJE DEL AMOR</h1>
     <button id="startButton" onclick="startQuiz()">Comienza el cuestionario</button>
     <div id="options" style="display: none;">
-        <button onclick="chooseOption()" id="option1">Option 1</button>
-        <button onclick="chooseOption()" id="option2">Option 2</button>
+        <button onclick="chooseOption(1)" id="option1">Option 1</button>
+        <button onclick="chooseOption(2)" id="option2">Option 2</button>
     </div>
     <h1 id="result"></h1>
+    <div class="message">Alba Clavijo Rodríguez</div>
 </div>
 
 <script>
-    var options = ["(A) Me gusta que mi pareja me mande mensajes cursis de vez en cuando",
-    "(E) Me gusta que mi pareja me toque la pierna cuando vamos en el coche",
-    "Me gusta estar a solas con mi pareja, dedicándonos tiempo el uno al otro (B)",
-    "Me siento querido/a cuando mi pareja me hace algo de comer (D)",
-    "Me gusta que mi pareja me regale cosas aunque no sea un día especial (C)",
-    "Me gusta que mi pareja me organice planes sorpresa (B)",
-    "Me siento querido/a cuando mi pareja me ayuda en alguno de mis proyectos/tareas (D)",
-    "Me gusta que mi pareja me haga mimos antes de dormir (E)",
-    "Me gusta que mi pareja esté siempre cerca físicamente; que me dé la mano, me acaricie la espalda...  (E)",
-    "Me gusta que mi pareja me sorprenda con algún detalle de vez en cuando (C)",
-    "Me gusta que mi pareja saque tiempo para ir de cita (B)",
-    "Me gusta que mi pareja y yo andemos de la mano por la calle (E)",
-    "Me gusta que mi pareja me regale cosas, aunque no sean materiales; un cuadro pintado por él/ella, una carta, etc. (C)",
-    "Me encanta que mi pareja me diga a menudo que me quiere, aunque no sea ningún día especial (A)",
-    "Me gusta que mi pareja se siente junto a mí cuando salimos a comer (E)",
-    "Me gusta que mi pareja me diga que me veo muy bien cuando me compro ropa nueva, me peino de manera diferente... (A)",
-    "Valoro mucho que mi pareja saque tiempo para hacer planes conmigo, especialmente cuando está muy ocupado (B)",
-    "Valoro mucho cualquier regalo que me da mi pareja aunque sea muy pequeño (C)",
-    "Siento que mi pareja me quiere cuando me dice que está orgulloso de mí (A)",
-    "Cuando mi pareja me ayuda, sé que lo hace porque me ama (D)"];
+    var options = ["Me gusta que mi pareja me mande mensajes cursis de vez en cuando",
+    "Me gusta que mi pareja me toque la pierna cuando vamos en el coche",
+    "Me gusta estar a solas con mi pareja, dedicándonos tiempo el uno al otro ",
+    "Me siento querido/a cuando mi pareja me hace algo de comer ",
+    "Me gusta que mi pareja me regale cosas aunque no sea un día especial ",
+    "Me gusta que mi pareja me organice planes sorpresa ",
+    "Me siento querido/a cuando mi pareja me ayuda en alguno de mis proyectos/tareas ",
+    "Me gusta que mi pareja me haga mimos antes de dormir ",
+    "Me gusta que mi pareja esté siempre cerca físicamente; que me dé la mano, me acaricie la espalda...  ",
+    "Me gusta que mi pareja me sorprenda con algún detalle de vez en cuando ",
+    "Me gusta que mi pareja saque tiempo para ir de cita ",
+    "Me gusta que mi pareja y yo andemos de la mano por la calle ",
+    "Me gusta que mi pareja me regale cosas, aunque no sean materiales; un cuadro pintado por él/ella, una carta, etc. ",
+    "Me encanta que mi pareja me diga a menudo que me quiere, aunque no sea ningún día especial ",
+    "Me gusta que mi pareja se siente junto a mí cuando salimos a comer ",
+    "Me gusta que mi pareja me diga que me veo muy bien cuando me compro ropa nueva, me peino de manera diferente... ",
+    "Valoro mucho que mi pareja saque tiempo para hacer planes conmigo, especialmente cuando está muy ocupado ",
+    "Valoro mucho cualquier regalo que me da mi pareja aunque sea muy pequeño ",
+    "Siento que mi pareja me quiere cuando me dice que está orgulloso de mí ",
+    "Cuando mi pareja me ayuda, sé que lo hace porque me ama ",
+    "Me encanta hacer cosas con mi pareja, no importa lo que hagamos ",
+    "Me encanta que mi pareja hable bien de mí y me diga cosas bonitas ",
+    "Las pequeñas cosas que mi pareja hace por mí son más importantes que cualquier cosa que mi pareja me pueda decir",
+    "Me encanta apoyar la cabeza sobre el hombro de mi pareja ",
+    "Me importa mucho que mi pareja valore lo que yo hago por él, y que me lo diga ",
+    "Es muy importante para mí que mi pareja me dé regalos que de verdad me gusten, porque significa que me conoce bien",
+    "Estar con mi pareja es algo que me gusta mucho, aunque no estemos haciendo nada en concreto ",
+    "Me gusta cuando mi pareja me abraza al dormir ",
+    "Ver que mi pareja presuma de mí y me halague cuando algo se me da bien ",
+    "Valoro mucho que mi pareja me ayude en algo que sé que odia hacer ",
+    "Me encantar recibir flores o regalos en trabajo / universidad por sorpresa ",
+    "Me encanta cuando veo que mi pareja muestra interés por algo que es importante para mí",
+    "Me gusta cuando mi pareja me ayuda a cargar con mis cosas, como el bolso, la mochila... ",
+    "Mi pareja y yo nos tomamos en serio los regalos de las fechas señaladas, como San Valentín ",
+    "Me gusta que mi pareja me diga constantemente que le gusto, aunque yo ya lo sepa ",
+    "Me gusta que mi pareja me escuche atentamente cuando me pasa algo ",
+    "Me gusta cuando mi pareja me da un beso al despedirse",
+    "Me gusta que mi pareja me ayude, especialmente cuando tengo mucho que hacer",
+    "Mi pareja merece un premio por todo lo que hace por mí ",
+    "Me emociono mucho cuando mi pareja me compra algo porque se acordó de mí",
+    "Es importante para mí tener la total atención de mi pareja cuando estamos juntos",
+    "Me gusta cuando mi pareja hace por mí cosas que yo odio hacer",
+    "Me gusta que mi pareja me abrace por sorpresa",
+    "Me gusta que mi pareja me diga siempre lo importante que soy para él/ella",
+    "Espero con ansias los regalos de mi pareja en fechas especiales",
+    "Que alguien que te quiere te ayude sin preguntar es muy importante para mí",
+    "Me gusta que mi pareja no use el móvil cuando estamos juntos",
+    "Me gusta que mi pareja me compre un snack de vuelta a casa",
+    "Me gusta abrazar y besar a mi pareja cuando nos reunimos después de un tiempo sin vernos",
+    "Me gusta escuchar que mi pareja me diga que me echó de menos cuando no nos vimos"];
 
-    var types = [0, 5, 1, 4, 3, 2, 4, 5, 5, 3, 2, 5, 3, 5, 0, 1, 2, 0, 4];
-    var current_responses = [0, 0, 0, 0, 0];
+    var types = [0, 4, 1, 3, 2, 1, 3, 4, 4, 2, 1, 4, 2, 0, 4, 0, 1, 2, 0, 3, 1, 0, 3, 4, 0, 2, 1, 
+                    4, 0, 3, 2, 1, 3, 2, 0, 1, 4, 3, 3, 2, 1, 3, 4, 0, 2, 3, 1, 2, 4, 0];
+
+    var current_responses = [0, 0, 0, 0, 0, 0];
     var significados = ["Tu lenguaje del amor son las palabras",
-                         "Tu lenguaje del amor es pasar tiempo de calidad",
-                          "Tu lenguaje del amor es dar regalos",
-                           "Tu lenguaje del amor es hacer actos de servicio",
-                            "Tu lenguaje del amor es el contacto físico"];
+                        "Tu lenguaje del amor es pasar tiempo de calidad",
+                        "Tu lenguaje del amor es dar regalos",
+                        "Tu lenguaje del amor es hacer actos de servicio",
+                        "Tu lenguaje del amor es el contacto físico"];
     var currentIndex = 0;
 
     function startQuiz() {
@@ -103,32 +219,22 @@
     }
 
     function chooseOption(choice) {
-        
         if (choice == 1) {
             var response = types[currentIndex];
+            current_responses[response]++;
         } else if (choice == 2) {
             var response = types[currentIndex+1];
+            current_responses[response]++;
         }
-        current_responses[response]++;
+        console.log(current_responses)
         currentIndex += 2;
-        if (currentIndex < options.length) {
+        if (currentIndex < types.length) {
             document.getElementById("option1").innerHTML = options[currentIndex];
             document.getElementById("option2").innerHTML = options[currentIndex + 1];
         } else {
-            // Find the maximum
-            max_idx = 0;
-            max_val = current_responses[max_idx]
-            for(i = 1; i < current_responses.length; i++)
-            {
-                if(current_responses[i] > max_val)
-                {
-                    max_idx = i;
-                    max_val = current_responses[i];
-                }
-            }
             document.getElementById("result").classList.add("button-animation"); // Add animation class to result
             document.getElementById("options").style.display = "none";
-            document.getElementById("result").innerHTML += "<br>" +  significados[max_idx] + "</br>" ; 
+            document.getElementById("result").innerHTML += "<br>" +  significados[current_responses.indexOf(Math.max(...current_responses))] + "</br>" ; 
             document.getElementById("result").style.display = "block";
         }
     }
